<resources>
    <string name="app_name">OTP Notifier</string>
    <string name="noti_title">New SMS with OTP!</string>
    <string name="toast_code_copied">OTP copied to clipboard</string>
    <string name="label_copy_to_clipboard_switch">Copy OTP to clipboard</string>
    <string name="summary_copy_to_clipboard_switch">Automatically copy extracted OTPs to system\'s clipboard</string>
    <string name="label_process_all_messages">Use sender whitelist</string>
    <string name="summary_process_all_messages">App will search for OTPs only in text messages from senders on this list (disable, to scan all text messages)</string>
    <string name="label_edit_nubers">Edit sender\'s whitelist</string>
    <string name="summary_edit_numbers">Edit list of numbers from which text messages will by scanned by app</string>
    <string name="label_headsup_notifications">Heads up notifications</string>
    <string name="summary_headsup_notifications">Make notification appear in a tooltip at the top of the screen</string>
    <string name="label_copy_code">Copy code</string>
    <string name="settings_libs_title">Version 1.0</string>
    <string name="settings_libs">Created by Michal Jakubowski</string>
    <string name="title_activity_edit_whitelist">Edit sender whitelist</string>
    <string name="title_add_sender">Add sender to whitelist</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_no_permission">Missing permission!</string>
    <string name="message_app_no_permission">This app cannot work without persmission to read incoming SMS.</string>
    <string name="button_ok">OK</string>
    <string name="button_grant">Grant</string>
    <string name="button_exit">Exit</string>
    <string name="title_error">Error!</string>
    <string name="message_empty_sender">You cannot add empty sender.</string>
    <string name="label_empty_list">No senders on the whitelist yet</string>
    <string name="label_edit_notifications">Notifications Settings</string>
    <string name="summary_edit_notifications">Change settings like importance (and thus heads up status), sound, etc.</string>
    <string name="noti_channel_description">Shows notifications with OTPs extracted from text messages</string>
    <string name="noti_channel_id">otp_notifications</string>
    <string name="noti_channel_name">OTP Channel</string>
    <string name="action_delete">Delete</string>
    <string name="message_wrong_regex">Couldn\'t compile regex: %s</string>
    <string name="button_update">Update</string>
    <string name="title_update_sender">Update whitelist item</string>
</resources>
